--- a/examples/framework-preact/package.json
+++ b/examples/framework-preact/package.json
@@ -9,6 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.23.2"
+    "astro": "^0.23.2",
+    "@astrojs/renderer-preact": "^0.5.0"
   }
 }
