--- a/packages/renderers/renderer-preact/package.json
+++ b/packages/renderers/renderer-preact/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@astrojs/renderer-preact",
+  "name": "@astrojs/preact",
   "description": "Use Preact components within Astro",
   "version": "0.5.0",
   "type": "module",
@@ -14,16 +14,18 @@
   "homepage": "https://astro.build",
   "exports": {
     ".": "./index.js",
-    "./*": "./*",
-    "./compat": "./compat/index.js",
+    "./client": "./client.js",
     "./client.js": "./client.js",
+    "./server": "./server.js",
     "./server.js": "./server.js",
     "./package.json": "./package.json"
   },
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.16.7",
-    "preact": "^10.6.5",
     "preact-render-to-string": "^5.1.19"
+  },
+  "peerDependencies": {
+    "preact": "^10.6.5"
   },
   "engines": {
     "node": "^14.15.0 || >=16.0.0"
