--- a/packages/astro/package.json
+++ b/packages/astro/package.json
@@ -67,6 +67,7 @@
     "@astropub/webapi": "^0.10.1",
     "@babel/core": "^7.15.8",
     "@babel/traverse": "^7.15.4",
+    "@builder.io/partytown": "^0.4.0",
     "@proload/core": "^0.2.2",
     "@proload/plugin-tsm": "^0.1.0",
     "@types/babel__core": "^7.1.15",
@@ -86,7 +87,7 @@
     "kleur": "^4.1.4",
     "magic-string": "^0.25.7",
     "micromorph": "^0.0.2",
-    "mime": "^3.0.0",
+    "mrmime": "^1.0.0",
     "parse5": "^6.0.1",
     "path-to-regexp": "^6.2.0",
     "postcss": "^8.3.8",
@@ -99,6 +100,7 @@
     "serialize-javascript": "^6.0.0",
     "shiki": "^0.10.0",
     "shorthash": "^0.0.2",
+    "sirv": "^2.0.2",
     "slash": "^4.0.0",
     "sourcemap-codec": "^1.4.8",
     "srcset-parse": "^1.1.0",
@@ -116,7 +118,6 @@
     "@types/chai": "^4.2.22",
     "@types/common-ancestor-path": "^1.0.0",
     "@types/connect": "^3.4.35",
-    "@types/mime": "^2.0.3",
     "@types/mocha": "^9.0.0",
     "@types/node-fetch": "^3.0.0",
     "@types/resolve": "^1.20.1",
