--- a/examples/framework-lit/package.json
+++ b/examples/framework-lit/package.json
@@ -9,7 +9,12 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/renderer-lit": "^0.4.0",
-    "astro": "^0.24.0-next.1"
+    "@astrojs/lit": "^0.4.0",
+    "@astrojs/partytown": "^0.1.0",
+    "@astrojs/sitemap": "^0.1.0",
+    "@astrojs/tailwind": "^0.1.0",
+    "@astrojs/turbolinks": "^0.1.0",
+    "astro": "^0.24.0-next.1",
+    "turbolinks": "^5.2.0"
   }
 }
