--- a/packages/integrations/vue/package.json
+++ b/packages/integrations/vue/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "@vitejs/plugin-vue": "^2.2.0"
   },
+  "devDependencies": {
+    "vue": "^3.2.30"
+  },
   "peerDependencies": {
     "vue": "^3.2.30"
   },
