--- a/packages/integrations/react/package.json
+++ b/packages/integrations/react/package.json
@@ -22,6 +22,10 @@
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.16.7"
   },
+  "devDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
