--- a/packages/integrations/solid/package.json
+++ b/packages/integrations/solid/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "babel-preset-solid": "^1.3.6"
   },
+  "devDependencies": {
+    "solid-js": "^1.3.6"
+  },
   "peerDependencies": {
     "solid-js": "^1.3.6"
   },
