--- a/packages/integrations/svelte/package.json
+++ b/packages/integrations/svelte/package.json
@@ -24,6 +24,9 @@
     "postcss-load-config": "^3.1.1",
     "svelte-preprocess": "^4.10.2"
   },
+  "devDependencies": {
+    "svelte": "^3.46.4"
+  },
   "peerDependencies": {
     "svelte": "^3.46.4"
   },
